--- a/example/core_drag_drop.html
+++ b/example/core_drag_drop.html
@@ -7,9 +7,10 @@
 
   <title>Core Drag Drop</title>
 
-  <script src="../platform/platform.js"></script>
+  <script src="packages/web_components/platform.js"></script>
+  <script src="packages/web_components/dart_support.js"></script>
 
-  <link rel="import" href="core-drag-drop.html">
+  <link rel="import" href="packages/core_elements/core_drag_drop.html">
 
   <style>
 
@@ -62,32 +63,7 @@
 
   <div id="drop" class="box" style="border: 3px solid silver; position: relative; width: 300px; height: 300px;" draggable="false"></div>
 
-  <script>
-    addEventListener('drag-start', function(e) {
-      var dragInfo = e.detail;
-      // flaw #2: e vs dragInfo.event
-      var color = dragInfo.event.target.style.backgroundColor;
-      dragInfo.avatar.style.cssText = 'border: 3px solid ' + color + '; width: 32px; height: 32px; border-radius: 32px; background-color: whitesmoke';
-      e.detail.avatar.appendChild(document.querySelector('#hello'));
-      dragInfo.drag = function() {};
-      dragInfo.drop = drop;
-    });
-    //
-    function drop(dragInfo) {
-      var color = dragInfo.avatar.style.borderColor;
-      var dropTarget = dragInfo.event.relatedTarget;
-      if (color && dropTarget.id === 'drop') {
-        var f = dragInfo.framed;
-        var d = document.createElement('div');
-        d.className = 'dropped';
-        d.style.left = f.x - 4 + 'px';
-        d.style.top = f.y - 4 + 'px';
-        d.style.backgroundColor = color;
-        dropTarget.appendChild(d);
-        dropTarget.style.backgroundColor = color;
-      }
-    }
-  </script>
+  <script type="application/dart" src="core_drag_drop.dart"></script>
 
 </body>
 </html>
