--- a/example/core_icon.html
+++ b/example/core_icon.html
@@ -33,5 +33,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <core-iconset id="meta"></core-iconset>
 </template>
 
+<script type="application/dart">export 'package:polymer/init.dart';</script>
 </body>
 </html>
