--- a/example/core_icons.html
+++ b/example/core_icons.html
@@ -90,6 +90,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </template>
     <core-iconset id="meta"></core-iconset>
   </template>
-
+  
+<script type="application/dart">export 'package:polymer/init.dart';</script>
 </body>
 </html>
