rename to remaining dart-* to core-*-dart, fixes #28

--- a/example/core_ajax_dart.html
+++ b/example/core_ajax_dart.html
@@ -14,14 +14,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   <script src="packages/web_components/platform.js"></script>
   <script src="packages/web_components/dart_support.js"></script>
-  <link rel="import" href="packages/core_elements/dart_ajax.html">
+  <link rel="import" href="packages/core_elements/core_ajax_dart.html">
 
 </head>
 <body>
 
-  <dart-ajax auto url="http://gdata.youtube.com/feeds/api/videos/" 
+  <core-ajax-dart auto url="http://gdata.youtube.com/feeds/api/videos/" 
       params='{"alt":"json", "q":"chrome"}'
-      handleAs="json"></dart-ajax>
+      handleAs="json"></core-ajax-dart>
     
   <template id="t2" bind repeat="{{ response.feed.entry }}">
     <div>{{ title.$t }}</div>
@@ -31,6 +31,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <template id="t1" bind>
     <div style="border: solid 1px blue;">x: {{ response.feed.entry.0.title.$t }}</div>
   </template>
-  <script type="application/dart" src="dart_ajax.dart"></script>
+  <script type="application/dart" src="core_ajax_dart.dart"></script>
 </body>
 </html>
