--- a/lib/core_xhr_dart.html
+++ b/lib/core_xhr_dart.html
@@ -9,6 +9,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="../../packages/polymer/polymer.html">
 
-<polymer-element name="dart-xhr" hidden>
-  <script type="application/dart" src="dart_xhr.dart"></script>
+<polymer-element name="core-xhr-dart" hidden>
+  <script type="application/dart" src="core_xhr_dart.dart"></script>
 </polymer-element>
