--- a/example/core_localstorage_dart.html
+++ b/example/core_localstorage_dart.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 
-  <title>dart-localstorage</title>
+  <title>core-localstorage-dart</title>
 
   <script src="packages/web_components/platform.js"></script>
   <script src="packages/web_components/dart_support.js"></script>
-  <link rel="import" href="packages/core_elements/dart_localstorage.html">
+  <link rel="import" href="packages/core_elements/core_localstorage_dart.html">
 
 </head>
 <body>
@@ -17,7 +17,7 @@
     <template>
       string entered below will be stored in localStorage and automatically retrived from localStorage when the page is reloaded<br>
       <input value="{{value}}">
-      <dart-localstorage name="polymer-localstorage-x-test1" value="{{value}}"></dart-localstorage>
+      <core-localstorage-dart name="polymer-localstorage-x-test1" value="{{value}}"></core-localstorage-dart>
     </template>
   </polymer-element>
 
@@ -28,7 +28,7 @@
   <polymer-element name="x-test2">
     <template>
       <input type="checkbox" checked="{{mode}}">
-      <dart-localstorage name="polymer-localstorage-x-test2" value="{{mode}}"></dart-localstorage>
+      <core-localstorage-dart name="polymer-localstorage-x-test2" value="{{mode}}"></core-localstorage-dart>
     </template>
   </polymer-element>
 
