rename test core_ajax to core_ajax_dart

--- a/test/core_ajax_dart.html
+++ b/test/core_ajax_dart.html
@@ -9,7 +9,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 <html>
   <head>
-    <title>core-ajax</title>
+    <title>core-ajax-dart</title>
 
     <script src="packages/web_components/platform.js"></script>
     <script src="packages/web_components/dart_support.js"></script>
@@ -21,6 +21,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       params='{"alt":"json", "q":"chrome"}'
       handleAs="json"
       auto></core-ajax-dart>
-    <script type="application/dart" src="core_ajax.dart"></script>
+    <script type="application/dart" src="core_ajax_dart.dart"></script>
   </body>
 </html>
