use double quotes consistently #41

--- a/test/core_localstorage_dart.html
+++ b/test/core_localstorage_dart.html
@@ -14,11 +14,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <script src="packages/web_components/platform.js"></script>
     <script src="packages/web_components/dart_support.js"></script>
 
-    <link rel='import' href='packages/core_elements/core_localstorage_dart.html'>
+    <link rel="import" href="packages/core_elements/core_localstorage_dart.html">
 
     <script type="application/dart" src="core_localstorage_dart.dart"></script>
   </head>
   <body>
-    <core-localstorage-dart id='localstorage' name='core-localstorage-test' useRaw></core-localstorage-dart>
+    <core-localstorage-dart id="localstorage" name="core-localstorage-test" useRaw></core-localstorage-dart>
   </body>
 </html>
