--- a/example/core_animation.html
+++ b/example/core_animation.html
@@ -140,7 +140,7 @@
               animation.play();
             });
             querySelector('#raw').on['core-animation-finish'].listen((e) {
-              window.alert('finish!');
+              print('finish!');
             });
           });
         });
