--- a/example/core_overlay.html
+++ b/example/core_overlay.html
@@ -9,11 +9,22 @@
 
   <link rel="import" href="packages/core_elements/core_transition_css.html">
   <link rel="import" href="packages/core_elements/core_overlay.html">
+  <style>
+      body {
+          margin: 0;
+      }
+
+      section {
+        padding: 24px;
+      }
+  </style>
 
 </head>
 <body unresolved>
 
-	<x-container></x-container>
+	<section>
+        <x-container></x-container>
+    </section>
 
 	<!-- a simple dialog element made with core-overlay -->
 	<polymer-element name="x-dialog" attributes="opened autoCloseDisabled">
