--- a/test/core_input.html
+++ b/test/core_input.html
@@ -19,14 +19,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <script type="application/dart" src="core_input.dart"></script>
   </head>
   <body>
-    <!-- core-input type='text -->
+    <!-- type='text -->
     <core-input id="typeText" value="Some content"></core-input>
 
-    <!-- core-input bind value -->
+    <!-- bind value -->
     <template id="bindValueTemplate" is="auto-binding-dart">
       <core-input id="bindValue" placeholder="input type='text'" value="{{stringValue}}"></core-input>
     </template>
 
+    <!-- validate number -->
     <template id="validateNumberTemplate" is="auto-binding-dart">
       <core-input id="validateNumber"
                   validate="^[0-9]*$"
@@ -36,6 +37,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                   invalid="{{isInvalid}}"
                   placeholder="Numbers only"></core-input>
     </template>
+
+    <!-- type="password" -->
 
     <template id="passwordTemplate" is="auto-binding-dart">
       <core-input id="password"
