fix core-shared-lib test

--- a/test/core_shared_lib.html
+++ b/test/core_shared_lib.html
@@ -21,7 +21,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <body>
     <core-shared-lib url="https://apis.google.com/js/client.js?onload=%%callback%%"></core-shared-lib>
 
-    <template id="t" model="{{}}" is='auto-binding-dart'>
+    <template id="t" is='auto-binding-dart'>
       <core-shared-lib url="https://apis.google.com/js/client.js?onload=%%callback%%"></core-shared-lib>
     </template>
   </body>
