add polymer import

--- a/example/core_overlay.html
+++ b/example/core_overlay.html
@@ -9,6 +9,7 @@
 
   <link rel="import" href="packages/core_elements/core_transition_css.html">
   <link rel="import" href="packages/core_elements/core_overlay.html">
+  <link rel="import" href="packages/polymer/polymer.html">
   <style>
       body {
           margin: 0;
