fix extra import paths from subdirectories

--- a/lib/core_icons/iconsets/png_icons.html
+++ b/lib/core_icons/iconsets/png_icons.html
@@ -1,1 +1,1 @@
-<link rel="import" href="src/core-icons/iconsets/png-icons.html">
+<link rel="import" href="../../src/core-icons/iconsets/png-icons.html">
