--- a/lib/core_icons/iconsets/hardware_icons.html
+++ b/lib/core_icons/iconsets/hardware_icons.html
@@ -1,2 +1,2 @@
-<link rel="import" href="src/core-icons/iconsets/hardware-icons.html">
-<link rel="import" href="core_iconset_svg/core_iconset_svg.html">
+<link rel="import" href="../../src/core-icons/iconsets/hardware-icons.html">
+<link rel="import" href="../../core_iconset_svg.html">
