--- a/example/core_drawer_panel.html
+++ b/example/core_drawer_panel.html
@@ -76,11 +76,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     import 'package:polymer/polymer.dart';
     export 'package:polymer/init.dart' show main;
 
-    _js(x) => new JsObject.fromBrowserObject(x);
-    
     @initMethod init() {
       querySelector('div[main] > button').onClick.listen((_) {
-        _js(querySelector('core-drawer-panel')).callMethod('togglePanel');
+        querySelector('core-drawer-panel').togglePanel();
       });
     }
     </script>
