remove workaround for #52 (missing `item` getter) fix quotes

--- a/test/core_selector_basic.html
+++ b/test/core_selector_basic.html
@@ -11,10 +11,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <head>
     <title>core-selector-basic</title>
 
-    <script src="packages/web_components/platform.js"></script>
-    <script src="packages/web_components/dart_support.js"></script>
+    <script src='packages/web_components/platform.js'></script>
+    <script src='packages/web_components/dart_support.js'></script>
 
-    <link rel="import" href="packages/core_elements/core_selector.html">
+    <link rel='import' href='packages/core_elements/core_selector.html'>
 
     <style>
       .core-selected {
@@ -26,10 +26,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </style>
 
-    <script type="application/dart" src="core_selector_basic.dart"></script>
+    <script type='application/dart' src='core_selector_basic.dart'></script>
   </head>
   <body>
-    <core-selector id="selector1">
+    <core-selector id='selector1'>
       <div>Item 1</div>
       <div>Item 2</div>
       <div>Item 3</div>
@@ -39,12 +39,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <br><br>
 
-    <core-selector id="selector2" selected="item3" selectedClass="my-selected" valueattr="id">
-      <div id="item1">Item 1</div>
-      <div id="item2">Item 2</div>
-      <div id="item3">Item 3</div>
-      <div id="item4">Item 4</div>
-      <div id="item5">Item 5</div>
+    <core-selector id='selector2' selected='item3' selectedClass='my-selected' valueattr='id'>
+      <div id='item1'>Item 1</div>
+      <div id='item2'>Item 2</div>
+      <div id='item3'>Item 3</div>
+      <div id='item4'>Item 4</div>
+      <div id='item5'>Item 5</div>
     </core-selector>
   </body>
 </html>
