--- a/test/core_selector_multi.html
+++ b/test/core_selector_multi.html
@@ -11,10 +11,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <head>
     <title>core-selector-basic</title>
 
-    <script src="packages/web_components/platform.js"></script>
-    <script src="packages/web_components/dart_support.js"></script>
+    <script src='packages/web_components/platform.js'></script>
+    <script src='packages/web_components/dart_support.js'></script>
 
-    <link rel="import" href="packages/core_elements/core_selector.html">
+    <link rel='import' href='packages/core_elements/core_selector.html'>
 
     <style>
       .core-selected {
@@ -22,10 +22,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </style>
 
-    <script type="application/dart" src="core_selector_multi.dart"></script>
+    <script type='application/dart' src='core_selector_multi.dart'></script>
   </head>
   <body>
-    <core-selector id="selector" multi>
+    <core-selector id='selector' multi>
       <div>Item 1</div>
       <div>Item 2</div>
       <div>Item 3</div>
