make core_ajax_dart test work in content_shell content_shell blocks access to external urls

--- a/test/core_ajax_dart.html
+++ b/test/core_ajax_dart.html
@@ -14,10 +14,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <script src="packages/web_components/platform.js"></script>
     <script src="packages/web_components/dart_support.js"></script>
     <link rel='import' href='packages/core_elements/core_ajax_dart.html'>
+    <script src="packages/unittest/test_controller.js"></script>
   </head>
   <body>
     <core-ajax-dart
-      url="http://gdata.youtube.com/feeds/api/videos/"
+      url="core_ajax_dart.json"
       params='{"alt":"json", "q":"chrome"}'
       handleAs="json"
       auto></core-ajax-dart>
