--- a/test/core_media_query.html
+++ b/test/core_media_query.html
@@ -15,10 +15,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <script src='packages/web_components/dart_support.js'></script>
     <script>
       // TODO(zoechi) workaround for issue 20216
+      // Calling these methods from Dart directly didn't work
+      // "Caught SecurityError: An attempt was made to break through the security policy of the user agent."
+      // see also https://code.google.com/p/dart/issues/detail?id=20221
       var OpenDialogWorkaround = function() {
         var dialog = null;
         this.open = function(url, target) {
-          dialog = window.open(url, target, 'width=400, height=700');
+          dialog = window.open(url, target);
         }
 
         this.close = function() {
