fix core_iconset example

--- a/example/core_iconset.html
+++ b/example/core_iconset.html
@@ -68,7 +68,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             this.style.height = this.style.width = '${iconset.iconSize}px';
             // use iconset's applyAsBackground method to set the given icon
             // as the element's background image.
-            iconset.applyIcon(this, iconName, null, null);
+            iconset.applyIcon(this, iconName, null);
           }
         }
       }
