--- a/test/core_media_query_test.html
+++ b/test/core_media_query_test.html
@@ -40,7 +40,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <link rel='import' href='packages/core_elements/core_media_query.html'>
 
-    <script type='application/dart' src='core_media_query.dart'></script>
+    <script type='application/dart' src='core_media_query_test.dart'></script>
   </head>
   <body>
 
