--- a/test/core_animated_pages_test.html
+++ b/test/core_animated_pages_test.html
@@ -59,6 +59,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </section>
       </core-animated-pages>
     </template>
-    <script type='application/dart' src='core_animated_pages.dart'></script>
+    <script type='application/dart' src='core_animated_pages_test.dart'></script>
   </body>
 </html>
