--- a/test/core_collapse_test.html
+++ b/test/core_collapse_test.html
@@ -15,7 +15,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <script src="packages/web_components/dart_support.js"></script>
     <link rel="import" href="packages/core_elements/core_collapse.html">
 
-    <script type="application/dart" src="core_collapse.dart"></script>
+    <script type="application/dart" src="core_collapse_test.dart"></script>
   </head>
   <body unresolved>
 
