--- a/test/core_input_test.html
+++ b/test/core_input_test.html
@@ -16,7 +16,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <link rel="import" href="packages/core_elements/core_input.html">
 
-    <script type="application/dart" src="core_input.dart"></script>
+    <script type="application/dart" src="core_input_test.dart"></script>
   </head>
   <body>
     <!-- type='text -->
@@ -35,7 +35,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <!-- validate number -->
     <template id="validateNumberTemplate" is="auto-binding-dart">
       <core-input id="validateNumber"
-                  validate="^[0-9]*$"
+                  pattern="^[0-9]*$"
                   value="{{stringValue}}"
                   on-input-invalid="{{inputInvalidHandler}}"
                   on-input-valid="{{inputValidHandler}}"
