--- a/test/core_menu_button_test.html
+++ b/test/core_menu_button_test.html
@@ -17,7 +17,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <link rel="import" href="packages/core_elements/core_menu_button.html">
     <link rel="import" href="packages/core_elements/core_item.html">
 
-    <script type="application/dart" src="core_menu_button.dart"></script>
+    <script type="application/dart" src="core_menu_button_test.dart"></script>
   </head>
   <body>
 
