--- a/test/core_selection_multi_test.html
+++ b/test/core_selection_multi_test.html
@@ -9,16 +9,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 <html>
   <head>
-    <title>core-localstorate</title>
+    <title>core-selection-multi</title>
 
     <script src="packages/web_components/platform.js"></script>
     <script src="packages/web_components/dart_support.js"></script>
 
-    <link rel="import" href="packages/core_elements/core_localstorage_dart.html">
+    <link rel="import" href="packages/core_elements/core_selection.html">
 
-    <script type="application/dart" src="core_localstorage_dart.dart"></script>
+    <script type="application/dart" src="core_selection_multi_test.dart"></script>
   </head>
   <body>
-    <core-localstorage-dart id="localstorage" name="core-localstorage-test" useRaw></core-localstorage-dart>
+    <core-selection multi></core-selection>
   </body>
 </html>
