--- a/test/core_selector_multi_test.html
+++ b/test/core_selector_multi_test.html
@@ -20,31 +20,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       .core-selected {
         background: #ccc;
       }
-
-      .my-selected {
-        background: red;
-      }
     </style>
 
-    <script type='application/dart' src='core_selector_basic.dart'></script>
+    <script type='application/dart' src='core_selector_multi_test.dart'></script>
   </head>
   <body>
-    <core-selector id='selector1'>
+    <core-selector id='selector' multi>
       <div>Item 1</div>
       <div>Item 2</div>
       <div>Item 3</div>
       <div>Item 4</div>
       <div>Item 5</div>
-    </core-selector>
-
-    <br><br>
-
-    <core-selector id='selector2' selected='item3' selectedClass='my-selected' valueattr='id'>
-      <div id='item1'>Item 1</div>
-      <div id='item2'>Item 2</div>
-      <div id='item3'>Item 3</div>
-      <div id='item4'>Item 4</div>
-      <div id='item5'>Item 5</div>
     </core-selector>
   </body>
 </html>
