--- a/test/core_shared_lib_test.html
+++ b/test/core_shared_lib_test.html
@@ -9,16 +9,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 <html>
   <head>
-    <title>core-selection-multi</title>
+    <title>core-shared-lib</title>
 
     <script src="packages/web_components/platform.js"></script>
     <script src="packages/web_components/dart_support.js"></script>
 
-    <link rel="import" href="packages/core_elements/core_selection.html">
+    <link rel="import" href="packages/core_elements/core_shared_lib.html">
 
-    <script type="application/dart" src="core_selection_multi.dart"></script>
+    <script type="application/dart" src="core_shared_lib_test.dart"></script>
   </head>
   <body>
-    <core-selection multi></core-selection>
+    <core-shared-lib url="https://apis.google.com/js/client.js?onload=%%callback%%"></core-shared-lib>
+
+    <template id="t" is='auto-binding-dart'>
+      <core-shared-lib url="https://apis.google.com/js/client.js?onload=%%callback%%"></core-shared-lib>
+    </template>
   </body>
 </html>
