Mark tests as polymer tests for the test framework

--- a/test/core_input_test.html
+++ b/test/core_input_test.html
@@ -9,6 +9,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 <html>
   <head>
+    <!--polymer-test: this comment is needed for test_suite.dart-->
     <title>core-input</title>
 
     <script src="packages/web_components/platform.js"></script>
