--- a/test/core_ajax_dart_test.html
+++ b/test/core_ajax_dart_test.html
@@ -11,6 +11,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <head>
     <title>core-ajax-dart</title>
 
+    <!--polymer-test: this comment is needed for test_suite.dart-->
+
     <script src="packages/web_components/platform.js"></script>
     <script src="packages/web_components/dart_support.js"></script>
     <link rel='import' href='packages/core_elements/core_ajax_dart.html'>
