--- a/test/core_animated_pages_test.html
+++ b/test/core_animated_pages_test.html
@@ -11,7 +11,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <head>
     <!--polymer-test: this comment is needed for test_suite.dart-->
     <title>core-animated-pages</title>
-
+    <script src='packages/unittest/test_controller.js'></script>
     <script src='packages/web_components/platform.js'></script>
     <script src='packages/web_components/dart_support.js'></script>
     <link rel='import' href='packages/core_elements/core_animated_pages.html'>
