--- a/test/core_media_query_test.html
+++ b/test/core_media_query_test.html
@@ -12,6 +12,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <!--polymer-test: this comment is needed for test_suite.dart-->
     <title>core-media-query</title>
 
+    <script src="packages/unittest/test_controller.js"></script>
     <script src='packages/web_components/platform.js'></script>
     <script src='packages/web_components/dart_support.js'></script>
     <script>
