--- a/lib/core_dropdown.html
+++ b/lib/core_dropdown.html
@@ -2,6 +2,5 @@
 <link rel="import" href="core_icon.html">
 <link rel="import" href="core_icons.html">
 <link rel="import" href="core_item.html">
-<link rel="import" href="core_menu.html">
-<link rel="import" href="core_overlay.html">
+<link rel="import" href="core_popup_menu.html">
 <script type="application/dart" src="core_dropdown.dart"></script>
