update/fix all examples

--- a/example/core_menu_button.html
+++ b/example/core_menu_button.html
@@ -20,13 +20,21 @@ license that can be found in the LICENSE file.
   
   <style>
     body {
-			margin: 0;
-			font-family: sans-serif;
+      margin: 0;
+      font-family: sans-serif;
     }
 
     core-toolbar {
       background-color: #cfa0e9;
       overflow: hidden;
+    }
+
+    core-menu-button::shadow #menu {
+      border: 1px solid #ccc;
+    }
+
+    core-item {
+      padding: 12px;
     }
 
     .small::shadow core-icon-button {
@@ -42,26 +50,26 @@ license that can be found in the LICENSE file.
 </head>
 <body class="core-body-text" unresolved>
 
-	
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<core-toolbar>
+  
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <core-toolbar>
 
-		<core-menu-button icon="menu">
+    <core-menu-button icon="menu">
 
-			<core-item icon="settings" label="Settings"></core-item>
-			<core-item icon="add" label="Add"></core-item>
-			<core-item icon="search" label="Search"></core-item>
+      <core-item icon="settings" label="Settings"></core-item>
+      <core-item icon="add" label="Add"></core-item>
+      <core-item icon="search" label="Search"></core-item>
 
-		</core-menu-button>
+    </core-menu-button>
 
     <core-menu-button icon="menu" class="small">
  
@@ -71,25 +79,25 @@ license that can be found in the LICENSE file.
  
     </core-menu-button>
 
-		<div core-flex>Toolbar</div>
+    <div flex>Toolbar</div>
 
-		<core-menu-button icon="add" halign="right">
+    <core-menu-button icon="add" halign="right" valign="top">
 
-			<core-item icon="star-rate" label="Rate"></core-item>
-			<core-item icon="today" label="Today"></core-item>
-			<core-item icon="keep" label="Keep"></core-item>
+      <core-item icon="star-rate" label="Rate"></core-item>
+      <core-item icon="today" label="Today"></core-item>
+      <core-item icon="keep" label="Keep"></core-item>
 
-		</core-menu-button>
+    </core-menu-button>
 
-		<core-menu-button icon="more-vert" halign="right" valign="top">
+    <core-menu-button icon="more-vert" valign="top">
 
-			<core-item icon="visibility" label="Visibility"></core-item>
-			<core-item icon="extension" label="Extension"></core-item>
-			<core-item icon="info" label="Info"></core-item>
+      <core-item icon="visibility" label="Visibility"></core-item>
+      <core-item icon="extension" label="Extension"></core-item>
+      <core-item icon="info" label="Info"></core-item>
 
-		</core-menu-button>
+    </core-menu-button>
 
-	</core-toolbar>
+  </core-toolbar>
 
 </body>
 </html>
