--- a/example/demo.html
+++ b/example/demo.html
@@ -74,6 +74,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <core-item label="Pages" tag="core-pages" url="core_pages.html"></core-item>
 
+    <core-item label="Popup Menu" tag="core-popup-menu" url="core_popup_menu.html"></core-item>
+
     <core-item label="Range" tag="core-range" url="core_range.html"></core-item>
 
     <core-item label="Scaffold" tag="core-scaffold" url="core_scaffold.html"></core-item>
