--- a/example/core_tooltip.html
+++ b/example/core_tooltip.html
@@ -16,12 +16,6 @@
       padding: 24px;
     }
 
-    section {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
     .example {
       margin: 35px 15px;
     }
@@ -68,7 +62,9 @@
       padding:20px;
       border-radius: 5px;
     }
+  </style>
 
+  <style shim-shadowdom>
     core-tooltip.fancy::shadow .polymer-tooltip {
       opacity: 0;
       -webkit-transition: all 300ms cubic-bezier(0,1.92,.99,1.07);
@@ -83,10 +79,9 @@
       -webkit-transform: translate3d(0, 0, 0);
       transform: translate3d(0, 0, 0);
     }
-  </style>
-  <style shim-shadowdom2>
+
     .on /deep/ .polymer-tooltip {
-      visibility: visible;
+      visibility: visible !important;
     }
   </style>
 
@@ -97,7 +92,7 @@
 
     <em>click the page to toggle all examples...</em>
     
-      <section class="small">
+      <section class="small" layout horizontal center-center>
 
         <div class="example">
 
@@ -130,7 +125,7 @@
 
       </section>
 
-      <section>
+      <section layout horizontal center-center>
 
         <div class="example">
 
@@ -153,7 +148,7 @@
 
       </section>
 
-      <section>
+      <section layout horizontal center-center>
 
         <div class="example">
 
