--- a/lib/core_dropdown.html
+++ b/lib/core_dropdown.html
@@ -1,6 +1,3 @@
 <link rel="import" href="src/core-dropdown/core-dropdown.html">
-<link rel="import" href="core_icon.html">
-<link rel="import" href="core_icons.html">
-<link rel="import" href="core_item.html">
-<link rel="import" href="core_popup_menu.html">
+<link rel="import" href="core_dropdown_overlay.html">
 <script type="application/dart" src="core_dropdown.dart"></script>
